--- a/package.json
+++ b/package.json
@@ -9,22 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.7",
+    "@langchain/community": "^0.3.17",
+    "@langchain/core": "^0.3.22",
+    "@langchain/mongodb": "^0.1.0",
+    "@langchain/openai": "^0.3.14",
     "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "ai": "^4.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "langchain": "^0.3.6",
+    "dotenv": "^16.4.7",
+    "filepond": "^4.32.5",
     "lucide-react": "^0.468.0",
+    "mongodb": "^6.11.0",
     "next": "14.2.14",
     "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-filepond": "^7.1.2",
+    "react-toastify": "^10.0.6",
     "react-hook-form": "^7.54.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
