--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@langchain/mongodb": "^0.1.0",
     "@langchain/openai": "^0.3.14",
     "@prisma/client": "^6.0.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
