--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "ai": "^4.0.13",
     "class-variance-authority": "^0.7.1",
@@ -40,7 +41,7 @@
     "pdfreader": "^3.0.5",
     "react": "^18",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.54.0",
     "react-toastify": "^10.0.6",
