--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^18.3.1",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.54.0",
+    "react-icons": "^5.4.0",
     "react-map-gl": "^7.1.7",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.5",
