--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
     "react-map-gl": "^7.1.7",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
