--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^18",
+    "@types/react-table": "^7.7.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "eslint-config-prettier": "^9.1.0",
