--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "esnext",
+      "typeRoots": ["./node_modules/@types", "./types"]
+
     ],
     "allowJs": true,
     "skipLibCheck": true,
